--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,14 @@
   node_bundler = "esbuild"
   included_files = ["proxy/dist/**"]
 [[redirects]]
-   from = "/*"
-   status = 200
-   to = "/.netlify/functions/index/:splat"
-   force = true
+  from = "/dist/browser/*"
+  status = 200
+  to = "/browser/:splat"
+[[redirects]]
+  from = "/*"
+  status = 200
+  to = "/.netlify/functions/index/:splat"
+  force = true
+[build]
+  command = "npm run build"
+  publish = "proxy/dist"
