--- a/node-xmcloud-proxy/package.json
+++ b/node-xmcloud-proxy/package.json
@@ -16,6 +16,7 @@
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "dotenv": "^16.0.3",
+    "serverless-http": "^3.2.0",
     "http-proxy-middleware": "^3.0.0"
   },
   "devDependencies": {
