--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
-﻿
-[functions]
+﻿[functions]
   directory = "node-xmcloud-proxy/src"
   node_bundler = "esbuild"
   included_files = ["node-xmcloud-proxy/dist/**"]
