--- a/node-xmcloud-proxy/package.json
+++ b/node-xmcloud-proxy/package.json
@@ -23,6 +23,7 @@
     "@sitecore-jss/sitecore-jss": "~22.3.0-canary",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
+    "@types/debug": "^4.1.12",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   }
