--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd ./node-xmcloud-proxy && npm run build-all && cd ..",
-   "install": "cd ./node-xmcloud-proxy && npm run install-all && cd ..",
+   "install": "cd ./node-xmcloud-proxy && npm install && npm run install-all && cd ..",
     "netlify-init": "netlify init",
     "deploy-netlify": "netlify build && netlify deploy --prod"
   },
